--- a/AssignmentOne/Base.lproj/Main.storyboard
+++ b/AssignmentOne/Base.lproj/Main.storyboard
@@ -1,24 +1,145 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="AssignmentOne" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="log">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign in" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IUg-wJ-Ii3">
+                                <rect key="frame" x="40" y="119" width="125" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="Nw2-eh-lwH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="enk-7b-1tY" userLabel="email Fields Stack View">
+                                <rect key="frame" x="40" y="300" width="334" height="78"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z3e-B3-SeJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email@example.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xtp-M9-IcP">
+                                        <rect key="frame" x="0.0" y="44" width="334" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Xtp-M9-IcP" secondAttribute="trailing" id="4QX-XK-ebf"/>
+                                    <constraint firstAttribute="trailing" secondItem="Z3e-B3-SeJ" secondAttribute="trailing" id="GGO-FA-QEM"/>
+                                    <constraint firstItem="Z3e-B3-SeJ" firstAttribute="leading" secondItem="enk-7b-1tY" secondAttribute="leading" id="XfK-gz-M1K"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="9bB-fR-jWw" userLabel="password Filelds Stack View">
+                                <rect key="frame" x="40" y="408" width="334" height="78"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIh-ah-mRN">
+                                        <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lct-1R-ryC">
+                                        <rect key="frame" x="0.0" y="44" width="334" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="eIh-ah-mRN" firstAttribute="leading" secondItem="9bB-fR-jWw" secondAttribute="leading" id="81P-co-oGR"/>
+                                    <constraint firstAttribute="trailing" secondItem="eIh-ah-mRN" secondAttribute="trailing" id="bwE-PG-pgp"/>
+                                    <constraint firstAttribute="trailing" secondItem="Lct-1R-ryC" secondAttribute="trailing" id="eTb-ba-Mu9"/>
+                                    <constraint firstItem="Lct-1R-ryC" firstAttribute="leading" secondItem="9bB-fR-jWw" secondAttribute="leading" id="gIN-Yv-XcF"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wR3-Wq-g5P">
+                                <rect key="frame" x="45" y="709" width="324" height="53"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="35"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" systemColor="systemTealColor"/>
+                                </state>
+                                <connections>
+                                    <segue destination="LRz-Z9-5XT" kind="show" id="Bld-MP-5D0"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <constraints>
+                            <constraint firstItem="9bB-fR-jWw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="2dQ-2x-Sds"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="enk-7b-1tY" secondAttribute="trailing" constant="40" id="NDX-OJ-TCT"/>
+                            <constraint firstItem="wR3-Wq-g5P" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="45" id="Q2R-HD-uVs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wR3-Wq-g5P" secondAttribute="trailing" constant="45" id="eaQ-9l-fza"/>
+                            <constraint firstItem="enk-7b-1tY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="fLZ-KJ-oLv"/>
+                            <constraint firstItem="9bB-fR-jWw" firstAttribute="top" secondItem="enk-7b-1tY" secondAttribute="bottom" constant="30" id="gNf-2p-ajA"/>
+                            <constraint firstItem="IUg-wJ-Ii3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="75" id="iai-cL-OfE"/>
+                            <constraint firstItem="enk-7b-1tY" firstAttribute="top" secondItem="IUg-wJ-Ii3" secondAttribute="bottom" constant="91" id="jn0-9k-iVQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9bB-fR-jWw" secondAttribute="trailing" constant="40" id="p6m-my-kgt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wR3-Wq-g5P" secondAttribute="bottom" constant="100" id="qjb-PK-B79"/>
+                            <constraint firstItem="IUg-wJ-Ii3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="rts-Lm-j9Z"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loginButton" destination="wR3-Wq-g5P" id="9sR-Ns-HfR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="8.6956521739130448" y="66.964285714285708"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="NrY-QG-2HG">
+            <objects>
+                <viewController id="LRz-Z9-5XT" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ccw-Ms-6Im">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYn-6c-aYD">
+                                <rect key="frame" x="53" y="44" width="178" height="78"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="178" id="7qb-1W-DWw"/>
+                                    <constraint firstAttribute="height" constant="78" id="bbc-eD-DmU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="cns-Jp-zfB"/>
+                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <constraints>
+                            <constraint firstItem="ZYn-6c-aYD" firstAttribute="leading" secondItem="cns-Jp-zfB" secondAttribute="leading" constant="53" id="atP-QB-Ui1"/>
+                            <constraint firstItem="ZYn-6c-aYD" firstAttribute="top" secondItem="cns-Jp-zfB" secondAttribute="top" constant="44" id="rfd-wA-uZC"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="cSX-Os-GN2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="If5-Vd-Egh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1137.68115942029" y="66.964285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
